API documentation optimization

--- a/_change_log_doc/2025-01-11.md
+++ b/_change_log_doc/2025-01-11.md
@@ -6,8 +6,11 @@ parameters:
 content:
 content_markdown: >-
 
-  * User Center-Referral Commission，added a new endpoint for querying user assets
-    * /v4/referal/invite/user/balance, get real-time asset information of users
+  * Spot - Deposit/Withdrawal,  **[/v4/public/wallet/support/currency]** endpoint has been updated to include additional return parameters
+    * depositMinAmount: Minimum Deposit Amount
+    * depositConfirmations: Recharge Confirmation Block Count
+    * withdrawPrecision: Withdrawal Amount Precision
+    * withdrawFeeCurrency: Withdrawal Fee Currency
 
 ---
 
