--- a/_change_log_doc_cn/2025-01-11.md
+++ b/_change_log_doc_cn/2025-01-11.md
@@ -6,8 +6,11 @@ parameters:
 content:
 content_markdown: >-
 
-  * 用户中心-邀请返佣，新增查询用户资产接口
-    * /v4/referal/invite/user/balance，获取用户实时资产信息
+  * 现货-充值/提现，**【/v4/public/wallet/support/currency】** 接口增加返回参数
+    * depositMinAmount：最小充值数
+    * depositConfirmations：充值确认块数
+    * withdrawPrecision：提币数量精度
+    * withdrawFeeCurrency：提币手续费币种
 
 ---
 
